--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@ System Volume Information/
 boot_out.txt
 short.py
 ._*
+._main.py
+._TG_gui_ex.py
+._boogs.py
+._code.py
+._lib
+._line_counter.py
+._programs
+._system
